--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 main {
   padding-left: 10px;
 }
@@ -24,4 +23,47 @@ input {
   border: 1px solid #e5e5e5;
   border-radius: 6px;
   padding: 7px 9px;
+}
+footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(37, 37, 39);
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  border-top: black;
+  padding: 10px;
+}
+
+.iconWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-family: Verdana;
+  font-size: 12px;
+}
+.icon {
+  color: white;
+  margin-bottom: 4px;
+  font-size: 19px;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #4141e9;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #4141e9;
+}
+::-webkit-scrollbar-track {
+  background: #24233b;
+  box-shadow: inset 0px 0px 0px 0px #f0f0f0;
 }
