--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,9 +1,11 @@
-.card {
+.card-detail {
   width: 175px;
   height: fit-content;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 16px;
+  border-radius: 10px;
   margin: 0 8px 10px 0;
+  background-color: #e7e7e7;
+  padding-bottom: 10px;
 }
 
 .card-info {
@@ -12,6 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 9px 12px;
+  color: rgb(46, 46, 46);
 }
 
 .figure {
