--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -4,7 +4,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #181818;
+  background-color: rgb(37, 37, 39);
   color: #ffffff;
   margin-bottom: 16px;
 }
